--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^2.5.3",
+    "vue-resource": "^1.3.4",
     "vuetify": "^0.17.3"
   },
   "devDependencies": {
